--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1>Dinnyék</h1>
         <p>David Livingstone, a híres Afrika-kutató, úgy írja le a görögdinnyét, hogy a Kalahári sivatagban rengeteg található belőle, úgy gondolják, hogy innen származik, és itt szabadon nő. A legkorábbi feljegyzett görögdinnyeszüret nagyjából 5000 évvel ezelőtt a dinasztikus Egyiptomban történt, hieroglifával is megörökítették. A növényt gyakran helyezték fáraók sírkamrájába élelemként a túlvilágra.</p>
         <img src="Summer_99.jpg" alt="Dinnye">
