--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
                 <li>sülthús</li>
             </ul>
         </div>
+
+        <div class="sidebar">
+            <ul>
+                <li>Görögdinnye</li>
+                <li>Sárgadinnye</li>
+                <li>Cukini</li>
+            </ul>
+        </div>
+
         <div class="foter"></div>
 
 
