--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 
         <div class="header">
-
+            <img src="falling-watermelon-3d-realistic-fruit-260nw-2469742095.webp" alt="">
         </div>
         <div class="nav">
 
@@ -48,8 +48,10 @@
                 <li>Cukini</li>
             </ul>
         </div>
-
-        <div class="foter"></div>
+        <div class="clear"></div>
+        <div class="foter">
+            <p>Copyright &copy; Borbély Máté</p>
+        </div>
 
 
     </div>
