--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
         <div class="header">
             <img src="falling-watermelon-3d-realistic-fruit-260nw-2469742095.webp" alt="">
         </div>
-        <div class="nav">
-
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
         </div>
         <div class="content">
             <h1>Dinnyék</h1>
-            <p>David Livingstone, a híres Afrika-kutató, úgy írja le a görögdinnyét, hogy a Kalahári sivatagban rengeteg
+            <p>David Livingstone, a híres Afrika-kutató, úgy írja le a <a
+                    href="https://hu.wikipedia.org/wiki/G%C3%B6r%C3%B6gdinnye" target="_blank">görögdinnyét</a>, hogy a
+                Kalahári sivatagban rengeteg
                 található belőle, úgy gondolják, hogy innen származik, és itt szabadon nő. A legkorábbi feljegyzett
                 görögdinnyeszüret nagyjából 5000 évvel ezelőtt a dinasztikus Egyiptomban történt, hieroglifával is
                 megörökítették. A növényt gyakran helyezték fáraók sírkamrájába élelemként a túlvilágra.</p>
